--- a/css/td.css
+++ b/css/td.css
@@ -34,6 +34,51 @@
     margin-top: 2px;
 }
 
+
+.individual-colors {
+    border-radius: 5px;
+    width: 40px;
+    height: 70px;
+    margin: 5px;
+    box-shadow: 1.5px 2.5px #838383;
+}
+
+#template-result {
+    float: right;
+    height: 20%;;
+}
+
+
+.template-child {
+    border: 1px solid orange;
+    height: 80px;
+    width: 80px;
+}
+
+
+.individual-colors:hover{
+    box-shadow: 0 0 0 5px #414040;
+}
+
+#template-content {
+    width: 50px;
+    height: auto;
+    margin: auto;
+    padding-bottom: 30px;
+}
+
+#template {
+    display: flex;
+}
+
+
+#color-result {
+    border: 1px solid gray;
+    border-radius: 15px;
+    height: 80px;
+    width: 80px;
+}
+
 .temporalPrint {
     background-color: olivedrab;
 }
@@ -42,9 +87,27 @@
     border-radius: 15px;
     border: 3px solid rgb(197, 197, 197);
     text-align: center;
-    height: 400px;
+    height: 300px;
     width: 100%;
     overflow-y: scroll;
+}
+
+.container-flex {
+    width: 40%;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+#colors {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    border: 3px solid rgb(197, 197, 197);
+    text-align: center;
+    height: 250px;
+    width: 100%;
+    margin-bottom: 50px;
 }
 
 input[type=radio] {
@@ -53,7 +116,25 @@ input[type=radio] {
     margin-left: 35%;
 }
 
-#commands {
+#player-frames {
+    margin-top: 20px;
+    border-radius: 15px;
+    border: 3px solid rgb(197, 197, 197);
+    text-align: center;
+    height: 200px;
+    width: 100%;
+}
+
+#frames-select {
+    border-radius: 30px;
+    text-align: center;
+    height: 30px;
+    width: 100px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#commands{
     float: right;
     width: 400px;
     height: 500px;
@@ -63,16 +144,23 @@ input[type=radio] {
     right: 15%;
 }
 
+#commands-lights {
+    float: right;
+    width: 400px;
+    height: 500px;
+    max-height: 600px;
+    margin-top: 10%;
+    right: 15%;
+}
+
 .position {
     padding: 10px;
     font-size: 50px;
-
 }
 
-tr{
+tr {
     margin: 20px;
 }
-
 
 table {
     border-collapse: separate;
@@ -101,7 +189,6 @@ td {
     background-repeat: no-repeat;
 }
 
-
 td:nth-last-child(-n+9) {
     border-radius: 0px;
 }
@@ -110,15 +197,13 @@ td:nth-child(-n+9) {
     border-radius: 0px;
 }
 
-
 .structureBehind {
     background-color: #616161;
 }
+
 .screenStructure {
     background-color: rgb(255, 94, 0);
 }
-
-
 
 tr {
     background-color: #949494;
@@ -132,9 +217,6 @@ tr:nth-last-child(4) {
     background: linear-gradient(180deg, #949494 50%, #242424 50%);
 }
 
-
-
 td:hover {
  background-color: orange;
 }
-
