--- a/css/light-positions.css
+++ b/css/light-positions.css
@@ -15,6 +15,16 @@
       border-radius: 15px;
 }
 
+#player-frame-button {
+  text-align: center;
+  height: 75px;
+  width: 75px;
+  font-size: 50px;
+  border-radius: 60px;
+  background-color: rgb(26, 180, 116);
+  color: white;
+}
+
 #add-frame-button {
   text-align: center;
   height: 60px;
@@ -27,8 +37,8 @@
 
 #delete-frame-button {
   text-align: center;
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
   font-size: 30px;
   border-radius: 30px;
   background-color: red;
